public/style.css
/* ... */
.contact-tag {
    color: white;
    padding: 3px 8px;
    border-radius: 4px 0px 0px 4px;
    font-size: 0.58em;
    font-weight: bold;
    white-space: nowrap;
}

.contact-preview {
    position: absolute;
    left: 10px;
    bottom: 12px;
    
    color: #666;
    font-size: 0.7em;
    opacity: .8;
    max-width: 130px;
    
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.contact-info {
    display: flex;
    justify-content: center;
    align-items: center;
    /* height: 20px; */
}
.contact-side {
    display: flex;
    column-gap: 5px;
}

.contact-message-time {
    position: absolute;
    font-size: .7rem;
    bottom: 12px;
    right: 10px;
    opacity: .8;
    font-weight: 700;
}

.contact.hidden {
    display: none;
}
.platform {
    display: flex;
    align-items: center;
    gap: 5px;
    font-size: 0.8em;
}
.facebook-icon {
    color: #1877F2;
}
.instagram-icon {
    color: #E1306C;
}
.whatsapp-icon {
    color: #25D366;
}

/* COMENTARIOS */
.contact-info.comment {
    display: flex;
    width: 100%;
    row-gap: 4px;
    height: 35px;
}
.comment-header {
    display: flex;
    column-gap: 7px;
    align-items: center;
    flex-grow: 1;
}
.type-identifier {
    background-color: #333;
    color: white;
    padding: 2px 6px;
    border-radius: 4px;
    font-size: 0.75em;
    font-weight: 500;
}
.comment-details {
    display: flex;
    justify-content: flex-end;
    column-gap: 6.5px;
    flex-grow: 1;
}

/* Área de chat */
.chat-area {
    flex: 1;
    display: flex;
    flex-direction: column;
    padding: 15px;
}
.chat-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 15px;
    border-bottom: 1px solid #333;
}
.chat-info-container {
    display: flex;
    align-items: center;
    gap: 10px;    
}
.post-link {
    display: none;
}
.post-link.active {
    display: inline;
    transition: all .3s ease;
    opacity: .8;
    color: #fff;
    text-decoration: none;
}

.post-link.active:hover {
    opacity: 1;
}
.post-link.active:visited, .post-link.active:active, .post-link.active:focus {
    color: inherit;
}

.chat-title {
    font-size: 1.2em;
    font-weight: bold;
}
.bot-toggle.small {
    display: flex;
    column-gap: 30px;
    justify-content: center;
    align-items: center;
    
}
.tag-btn-container {
    display: flex;
    flex-wrap: wrap; /* Allow buttons to wrap to the next line */
    justify-content: flex-start; /* Align wrapped buttons to the start */
    gap: 8px; /* Space between wrapped buttons */
}
.tag-btn-container.active {
    display: none;
}
.tag-btn {
    padding: 7px 15px;
    border: .5px solid transparent;
    border-radius: 15px;
    background-color: transparent;
    color: #fff;
    font-weight: 700;
    cursor: pointer;
    transition: all 0.3s ease;
}

.tag-btn--contraentrega {
    border-color: #26d367;
}
.tag-btn--contraentrega:hover {
    background-color: rgba(38, 211, 103, 0.35); /* Using rgba for hover effect */
}
.tag-btn--rp {
    border-color: #efb32f;
}
.tag-btn--rp:hover {
    background-color: rgba(239, 179, 47, 0.35); /* Using rgba for hover effect */
}
.tag-btn--delivery {
    border-color: #57c9ff;
}
.tag-btn--delivery:hover {
    background-color: rgba(87, 201, 255, 0.35); /* Using rgba for hover effect */
}
.tag-btn--terminado {
    border-color: #c89ecc;
}
.tag-btn--terminado:hover {
    background-color: rgba(200, 158, 204, 0.35); /* Using rgba for hover effect */
}

.bot-toggle-options {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
}
.bot-toggle-options span {
    font-size: 1.15rem;
}
.bot-toggle.small .toggle {
    width: 40px;
    height: 20px;
}
.bot-toggle.small .slider:before {
    height: 14px;
    width: 14px;
    left: 3px;
    bottom: 3px;
}
.bot-toggle.small input:checked + .slider:before {
    transform: translateX(20px);
}

/* Mensajes */
.messages {
    flex: 1;
    overflow-y: auto;
    padding: 15px 0;
    display: flex;
    flex-direction: column;
    gap: 10px;
}
/* Scrollbar for messages*/
.messages::-webkit-scrollbar {
    width: 6px;
}
.messages::-webkit-scrollbar-thumb {
    background-color: #2a2a2a;
}
.messages::-webkit-scrollbar-thumb:hover {
    background-color: #2f2f2f;
}
.message {
    max-width: 80%;
    border-radius: 18px;
    position: relative;
}
.message-audio {
    position: absolute;
    bottom: 10px;
    left: 20px;
    opacity: .6;
    font-size: .7em;
}
.message.contact-sender {
    align-self: flex-start;
    background-color: #333;
}
.message.bot-sender {
    align-self: flex-end;
    background-color: #0b93f6;
}
.message-content {
    border-radius: 18px;
    padding: 10px 15px;
    display: inline-block;
    position: relative;
    white-space: pre-wrap;
}
/* message image */
.message.image {
    background-color: transparent;
}
.message-image {
    max-width: 350px;
    max-height: 250px;
    border-radius: 12px;
    display: block;
    margin-bottom: 5px;
    object-fit: cover;
}

.message-time {
    font-size: 0.7em;
    color: rgba(255, 255, 255, 0.6);
    margin-top: 4px;
    display: block;
    text-align: right;
}

/* Campo de entrada de mensaje */
.message-input-container {
    display: flex;
    border-radius: 30px;
    background-color: #1e1e1e;
    border: 1px solid #333;
    align-items: center; /* Align items to the bottom */
    position: relative; /* Needed for absolute positioning of children */
}
.message-input {
    flex: 1;
    background: transparent;
    border: none;
    color: white;
    padding: 15px 20px;
    font-size: 1rem;
    outline: none;
    resize: none; /* Prevent manual resizing */
    overflow-y: auto; /* Show scrollbar when max-height is reached */
    max-height: 120px; /* Example max-height */
    line-height: 1.5;
}
.message-input::placeholder {
    color: #aaa;
}
/* ... */

